fix 100vh on mobile

--- a/src/styles/layout/_l-onboarding.scss
+++ b/src/styles/layout/_l-onboarding.scss
@@ -13,6 +13,7 @@
   // max-width: 380px;
   overflow: hidden;
   min-height: -webkit-fill-available;
+  box-sizing: border-box;
 
   .background {
     position: absolute;
